--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,3 +1,25 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron text-center">
+    <h1>User Profile App</h1>  
+    <p class="lead">Welcome to your home page!</p>
+    <div>
+      <a class="btn btn-primary" [routerLink]="['/register']">Register</a> <a class="btn btn-default" [routerLink]="['/login']">Login</a>
+    </div>
+  
+</div>
+  
+  <div class="row">
+    <div class="col-md-4">
+      <h3>TODO</h3>
+      <p>Login to view profile</p>
+  
+    </div>
+    <div class="col-md-4">
+        <h3>TODO</h3>
+        <p>Register if new</p>
+    </div>
+    <div class="col-md-4">
+        <h3>TODO</h3>
+        <p>Edit profile</p>
+    </div>
+  </div>
+  
