--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <nav class="navbar navbar-default">
     <a class="navbar-brand" href="#">UserProfile</a>
     
@@ -8,16 +9,8 @@
           <a class="nav-link" [routerLink]="['/']">Home</a>
         </li>
       </ul>
-      
+
       <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-          <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="#">Action</a>
-            <a class="dropdown-item" href="#">Another action</a>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
-        </li>
         <li class="nav-item" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
           <a class="nav-link" [routerLink]="['/login']">Login</a>
         </li>
@@ -28,3 +21,4 @@
 
     </div>
   </nav>
+</div>
