Some additional validation/mesages in registration page

--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -1,20 +1,50 @@
-<h2 class="page-header">Register</h2>
-<form (submit)="onRegisterSubmit()">
-  <div class="form-group">
-    <label>Name</label>
-    <input type="text" [(ngModel)]="name" name="name" class="form-control">
+<div>
+<div *ngIf="input.error" class="alert alert-danger">
+  {{input.errorMessage}}
+</div>
+<div class="row">
+  <div class="col-md-1"></div>
+
+  <div class="col-md-7">
+    <h2 class="page-header">Register</h2>
+    <form (submit)="onRegisterSubmit()">
+      <div class="form-group">
+        <label>Name</label>
+        <input type="text" [(ngModel)]="name" name="name" class="form-control">
+      </div>
+      <div class="form-group">
+        <label>Username</label>
+        <input type="text" [(ngModel)]="username" name="username" class="form-control">
+      </div>
+      <div class="form-group">
+        <label>E-mail</label>
+        <input type="text" [(ngModel)]="email" name="email" class="form-control">
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input type="password" [(ngModel)]="password" name="password" class="form-control">
+      </div>
+      <input type="submit" class="btn btn-primary" value="Submit">
+    </form>
   </div>
-  <div class="form-group">
-    <label>Username</label>
-    <input type="text" [(ngModel)]="username" name="username" class="form-control">
+
+  <div class="col-md-3">
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <br/>
+    <div class="panel panel-default">
+      <div class="panel-body">
+          <h4><strong><u>Requirements</u></strong></h4>
+        <p >
+        1. Username must be at least 6 characters<br/>
+        2. Password must be at least 8 characters<br/>
+        3. Must use valid e-mail address<br/>
+        </p>
+    </div>
+    </div>
   </div>
-  <div class="form-group">
-    <label>E-mail</label>
-    <input type="text" [(ngModel)]="email" name="email" class="form-control">
-  </div>
-  <div class="form-group">
-    <label>Password</label>
-    <input type="password" [(ngModel)]="password" name="password" class="form-control">
-  </div>
-  <input type="submit" class="btn btn-primary" value="Submit">
-</form>
+  <div class="col-md-1"></div>
+</div>
