Some additional validation/mesages in registration page - 2

--- a/angular-src/src/app/components/register/register.component.html
+++ b/angular-src/src/app/components/register/register.component.html
@@ -1,5 +1,5 @@
 <div>
-<div *ngIf="input.error" class="alert alert-danger">
+<div *ngIf="input.error && input.errorMessage" class="alert alert-danger">
   {{input.errorMessage}}
 </div>
 <div class="row">
