--- a/angular-src/src/app/components/login/login.component.html
+++ b/angular-src/src/app/components/login/login.component.html
@@ -1,3 +1,26 @@
-<p>
-  login works!
-</p>
+<div>
+  <div *ngIf="input.error && input.errorMessage" class="alert alert-danger">
+    {{input.errorMessage}}
+  </div>
+  <div class="row">
+    <div class="col-md-2"></div>
+  
+    <div class="col-md-8">
+      <h2 class="page-header">Login</h2>
+
+      <form (submit)="onLoginSubmit()">
+        <div class="form-group">
+          <label>Username</label>
+          <input type="text" [(ngModel)]="username" name="username" class="form-control">
+        </div>
+        <div class="form-group">
+          <label>Password</label>
+          <input type="password" [(ngModel)]="password" name="password" class="form-control">
+        </div>
+        <input type="submit" class="btn btn-primary" value="Login">
+      </form>
+      
+    </div>
+  
+    <div class="col-md-2"></div>
+  </div>
