--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -17,6 +17,9 @@
         <li class="nav-item" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
           <a class="nav-link" [routerLink]="['/register']">Register</a>
         </li>
+        <li>
+          <a (click)="onLogoutClick()" href="#">Logout</a>
+        </li>
       </ul>
 
     </div>
