--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -11,13 +11,19 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
+        <li class="nav-item" *ngIf="authService.loggedIn()" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
+          <a class="nav-link" [routerLink]="['/dashboard']">Dashboard</a>
+        </li>
+        <li class="nav-item" *ngIf="authService.loggedIn()" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
+          <a class="nav-link" [routerLink]="['/profile']">Profile</a>
+        </li>
+        <li class="nav-item" *ngIf="!authService.loggedIn()" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
           <a class="nav-link" [routerLink]="['/login']">Login</a>
         </li>
-        <li class="nav-item" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
+        <li class="nav-item" *ngIf="!authService.loggedIn()" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
           <a class="nav-link" [routerLink]="['/register']">Register</a>
         </li>
-        <li>
+        <li *ngIf="authService.loggedIn()">
           <a (click)="onLogoutClick()" href="#">Logout</a>
         </li>
       </ul>
