--- a/angular-src/src/app/components/profile/profile.component.html
+++ b/angular-src/src/app/components/profile/profile.component.html
@@ -1,8 +1,17 @@
-<h2>Your profile</h2>
-<div *ngIf="user">
-  <h2 class="page-header">{{user.name}}</h2>
-  <ul class="list-group">
-    <li class="list-group-item">Username: {{user.username}}</li>
-    <li class="list-group-item">E-mail: {{user.email}}</li>
-  </ul>
+<div class="whole" *ngIf="user">
+  <div id="background-img"></div>
+  <div class="jumbotron">
+
+    <div class="row">
+      <div class="right col-md-3">
+        <h3>{{user.name}}</h3>
+        <img src="/assets/pink_dark_boy.jpg" alt="Profile picture" width="100%" height="100%">
+      </div>
+      <div class="col-md-9">
+        <h3>About</h3>
+        <p>Hello, placeholder for about me.</p>
+      </div>
+    </div>
+
+  </div>
 </div>
