--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,3 +1,71 @@
-<p>
-  dashboard works!
-</p>
+<h3>Your dashboard</h3>
+<div class="jumbotron">
+  <div class="row">
+    <div class="right col-md-6">
+      <h3>Tasks
+        <a style="text-decoration: underline" [routerLink]="['/']">(View all)</a>
+      </h3>
+      <p style="text-decoration: underline; color: rgb(0, 128, 90)">Today ({{todaysDate}}): {{numDueToday}} tasks</p>
+      <div class="items row container">
+        <div class="col-md-6">
+          <div class="well col-md-12">
+            <a>TEST HEADER 1</a>
+            <br/> Placeholder description...
+            <br/>
+            <div>
+              <button class="btn-success">
+                <i class="glyphicon glyphicon-ok"></i>
+              </button>
+              <span> </span>
+              <button class="btn-danger">
+                <i class="glyphicon glyphicon-remove"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="well col-md-12">
+            TEST HEADER 2
+            <br/> Placeholder description...
+            <div>
+              <button class="btn-success">
+                <i class="glyphicon glyphicon-ok"></i>
+              </button>
+              <span> </span>
+              <button class="btn-danger">
+                <i class="glyphicon glyphicon-remove"></i>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="items row container">
+        <div class="col-md-6">
+          <div class="well col-md-12">
+            TEST HEADER 3
+            <br/> Placeholder description
+            <br/> Description continued...
+            <br/>
+            <button class="btn-success">
+              <i class="glyphicon glyphicon-ok"></i>
+            </button>
+            <span> </span>
+            <button class="btn-danger">
+              <i class="glyphicon glyphicon-remove"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <h3>Tasks Overview</h3>
+      <p>TODO: Weekly tasks completion chart</p>
+    </div>
+  </div>
+</div>
+
+<style>
+  .well {
+    background-color: #002b36;
+  }
+</style>
