added constant and formatting html

--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
                 <a>{{task.name}}</a>
               </p>
               <p class="taskDesc">{{task.description}}</p>
-              <br/> Due: {{formatDate(task.dueDate)}}
+              Due: {{formatDate(task.dueDate)}}
               <br/> Status: {{getTaskStatusByCode(task.statusCode)}}
               <br/><br/>
               <div class="buttonDiv pull-right">
@@ -35,7 +35,8 @@
         </div>
       </div>
       <div class="well directReportsDiv">
-        <p style="text-decoration: underline; color: rgb(0, 128, 90)">Direct Reports</p>
+        <h3>Direct Reports</h3>
+        <p style="text-decoration: underline; color: rgb(0, 128, 90)">Placeholder person 1</p>
       </div>
     </div>
     <div class="col-md-6">
