--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -1,73 +1,75 @@
 <h3>Your dashboard</h3>
 <div class="jumbotron">
-  <div class="row">
-    <div class="right col-md-6">
-      <div class="tasksDiv well">
-        <h3>Tasks
-          <a style="text-decoration: underline" [routerLink]="['/']">(View all)</a>
-        </h3>
-        <p style="text-decoration: underline; color: rgb(0, 128, 90)">Today ({{todaysDate}}): {{numDueToday}} tasks</p>
-        <div class="items row">
-          <div class="col-md-6" *ngFor="let task of tasksList">
-            <div class="task well col-md-12">
-              <p class="taskHeader">
-                <a>{{task.name}}</a>
-              </p>
-              <p class="taskDesc">{{task.description}}</p>
-              Due: {{formatDate(task.dueDate)}}
-              <br/> Status: {{getTaskStatusByCode(task.statusCode)}}
-              <br/><br/>
-              <div class="buttonDiv pull-right">
-                <button class="btn-warning">
-                  <i class="glyphicon glyphicon-edit"></i>
-                </button>
-                <span> </span>
-                <button class="btn-success">
-                  <i class="glyphicon glyphicon-ok"></i>
-                </button>
-                <span> </span>
-                <button class="btn-danger">
-                  <i class="glyphicon glyphicon-remove"></i>
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="well directReportsDiv">
-        <h3>Direct Reports</h3>
-        <p style="text-decoration: underline; color: rgb(0, 128, 90)">Placeholder person 1</p>
-      </div>
-    </div>
-    <div class="col-md-6">
-      <div class="well chartDiv">
-        <h3>Tasks Overview</h3>
-        <p>TODO: Weekly tasks completion chart</p>
-      </div>
-    </div>
-  </div>
+	<div class="row">
+		<div class="right col-md-6">
+			<div class="tasksDiv well">
+				<h3>Tasks
+					<a style="text-decoration: underline" [routerLink]="['/']">(View all)</a>
+				</h3>
+				<p style="text-decoration: underline; color: rgb(0, 128, 90)">Today ({{todaysDate}}): {{numDueToday}} tasks</p>
+				<div class="items row">
+					<div class="col-md-6" *ngFor="let task of tasksList">
+						<div class="task well col-md-12">
+							<p class="taskHeader">
+								<a>{{task.name}}</a>
+							</p>
+							<p class="taskDesc">{{task.description}}</p>
+							Due: {{formatDate(task.dueDate)}}
+							<!-- <br/> Status: {{getTaskStatusByCode(task.statusCode)}} -->
+							<br/> Status: {{task.status?.status}}
+							<br/>
+							<br/>
+							<div class="buttonDiv pull-right">
+								<button class="btn-warning">
+									<i class="glyphicon glyphicon-edit"></i>
+								</button>
+								<span> </span>
+								<button class="btn-success">
+									<i class="glyphicon glyphicon-ok"></i>
+								</button>
+								<span> </span>
+								<button class="btn-danger">
+									<i class="glyphicon glyphicon-remove"></i>
+								</button>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="well directReportsDiv">
+				<h3>Direct Reports</h3>
+				<p style="text-decoration: underline; color: rgb(0, 128, 90)">Placeholder person 1</p>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<div class="well chartDiv">
+				<h3>Tasks Overview</h3>
+				<p>TODO: Weekly tasks completion chart</p>
+			</div>
+		</div>
+	</div>
 </div>
 
 <style>
-  .task {
-    background-color: #002b36;
-  }
+	.task {
+		background-color: #002b36;
+	}
 
-  .tasksDiv {}
+	.tasksDiv {}
 
-  .taskDesc {
-    width: 180px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: 15px;
-    word-wrap: break-word;
-  }
+	.taskDesc {
+		width: 180px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		font-size: 15px;
+		word-wrap: break-word;
+	}
 
-  .taskHeader {
-    width: 180px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: 15px
-  }
+	.taskHeader {
+		width: 180px;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		font-size: 15px
+	}
 </style>
