--- a/angular-src/src/app/components/dashboard/dashboard.component.html
+++ b/angular-src/src/app/components/dashboard/dashboard.component.html
@@ -3,10 +3,12 @@
 	<div class="row">
 		<div class="right col-md-6">
 			<div class="tasksDiv well">
+				<app-task-modals></app-task-modals>
 				<h3>
 					<a style="text-decoration: underline" [routerLink]="['/']">Your Tasks</a>
 				</h3>
-				<span style="color: rgb(0, 128, 90)">Total: {{tasksDue?.length}}</span><br/>
+				<span style="color: rgb(0, 128, 90)">Total: {{tasksDue?.length || 0}}</span>
+				<br/>
 				<div class="items row">
 					<div *ngFor="let task of tasksDue">
 						<div class="col-md-6">
@@ -21,7 +23,7 @@
 								<br/>
 								<br/>
 								<div class="buttonDiv pull-right">
-									<button class="btn-warning" title="Edit" (click)="editTask(task)">
+									<button class="btn-warning" title="Edit" (click)="editTask(task)" data-toggle="modal" data-target="#editTaskModal">
 										<i class="glyphicon glyphicon-edit"></i>
 									</button>
 									<span> </span>
