--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -1,37 +1,40 @@
+<div class="container">
 <nav class="navbar navbar-default">
   <a class="navbar-brand" href="#">UserProfile</a>
-
-
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="nav navbar-nav navbar-left">
-      <li class="nav-item" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
-        <a class="nav-link" [routerLink]="['/']">Home</a>
+      <li class="nav-item" *ngIf="authService.loggedIn()" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
+        <a class="nav-link" [routerLink]="['/dashboard']">Dashboard</a>
       </li>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
-      <li class="nav-item" *ngIf="authService.loggedIn()" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
-        <a class="nav-link" [routerLink]="['/dashboard']">Dashboard</a>
-      </li>
-      <li class="nav-item" *ngIf="authService.loggedIn()" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
-        <a class="nav-link" [routerLink]="['/profile']">Profile</a>
-      </li>
+
       <li class="nav-item" *ngIf="!authService.loggedIn()" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
         <a class="nav-link" [routerLink]="['/login']">Login</a>
       </li>
       <li class="nav-item" *ngIf="!authService.loggedIn()" [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
         <a class="nav-link" [routerLink]="['/register']">Register</a>
       </li>
-      <li class="nav-item dropdown" *ngIf="authService.loggedIn()">
-        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Name Here</a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" [routerLink]="['/profile']" *ngIf="authService.loggedIn()">Profile</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" (click)="onLogoutClick()" href="#">Logout</a>
-        </div>
+      <li class="dropdown" *ngIf="authService.loggedIn()">
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Your Name
+          <span class="caret"></span>
+        </a>
+        <ul class="dropdown-menu">
+          <li [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
+            <a class="nav-link" [routerLink]="['/profile']">Profile</a>
+          </li>
+          <li [routerLinkActive]="'active'" [routerLinkActiveOptions]="{exact:true}">
+              <a class="nav-link" [routerLink]="['/my-tasks']">My Tasks</a>
+            </li>
+          <li class="nav-divider"></li>
+          <li>
+            <a (click)="onLogoutClick()" href="#">Logout</a>
+          </li>
+        </ul>
       </li>
-
     </ul>
 
   </div>
 </nav>
+</div>
