--- a/angular-src/src/app/components/tasks/task-modals/task-modals.component.html
+++ b/angular-src/src/app/components/tasks/task-modals/task-modals.component.html
@@ -29,7 +29,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-success" type="submit">Save</button>
-          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-danger" data-dismiss="modal" #closeEditModal>Close</button>
         </div>
       </form>
     </div>
