Updated angular dependencies and google charts

--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default sticky-top">
   <a class="navbar-brand" href="#">UserProfile</a>
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="nav navbar-nav navbar-left">
